# LearnOS

./: AGENTS.md  README.md  agent.md  pyproject.toml
data/: sample.md
docs/frontend/: api_field_dictionary_v1.md  component_contracts_and_structure_v1.md  frontend_implementation_spec_v1.md  issues_import_instructions.md
scripts/: import_frontend_tasks_issues.sh
src/zhicore/: __init__.py  api.py  chunking.py  cli.py  embedding.py  graph_rag.py  ingest.py  kg.py  phase2.py  phase3.py  phase4.py  pipeline.py  rag.py  types.py  vector_store.py  visualization.py
src/zhicore/application/: kg_service.py  query_service.py
src/zhicore/domain/agent/: tools.py
src/zhicore/domain/rag/: interfaces.py
src/zhicore/phase2/: __init__.py  build.py  graph_rag.py  stats.py  subgraph.py
src/zhicore/phase3/: __init__.py  agents.py  service.py  store.py  types.py
tests/: test_chunking.py  test_cli_phase2.py  test_cli_phase4.py  test_kg_hygiene.py  test_phase2.py  test_phase3.py  test_phase4.py  test_pipeline.py  test_vector_store.py  test_visualization.py
web/: package-lock.json  package.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx
web/src/app/ask/: page.tsx
web/src/app/knowledge/: page.tsx
web/src/app/learning/: page.tsx
web/src/app/mastery/: page.tsx
web/src/integration/: ask-learning-flow.test.ts
web/src/stores/: ask-store.ts  learning-store.test.tsx  learning-store.ts
web/src/types/: api.ts
web/src/utils/: agent-timeline.test.ts  agent-timeline.ts  api-error.test.ts  api-error.ts  mastery-view.test.ts  mastery-view.ts  toast-store.ts
(+13 files in other folders)
