[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zhicore"
version = "0.1.0"
description = "Phase 1 MVP pipeline for ZhiCore/CogniCore"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.2.0"]
dev = ["pytest>=8.2.0"]
rag = ["faiss-cpu", "rank-bm25", "sentence-transformers"]

[project.scripts]
zhicore = "zhicore.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
